# ciecplib

./: .appveyor.yml  .bandit.yml  .codeclimate.yml  .coveragerc  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .readthedocs.yml  .travis.yml  MANIFEST.in  Portfile.template  README.md  RELEASE.md  ciecplib.spec  ligo-dot-org.spec  ligo.org.spec  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tests.py  vcs.py
.circleci/: config.yml
.github/workflows/: build.yml  conda.yml  docs.yml  lint.yml  packaging.yml  python.yml  test.yml
ciecplib/: __init__.py  conftest.py  cookies.py  ecp.py  env.py  http.py  kerberos.py  logging.py  requests.py  sessions.py  ui.py  utils.py  x509.py
ciecplib/tests/: __init__.py  conftest.py  test_cookies.py  test_env.py  test_kerberos.py  test_requests.py  test_sessions.py  test_utils.py  test_x509.py
ciecplib/tool/: __init__.py  ecp_cert_info.py  ecp_cookie_init.py  ecp_curl.py  ecp_get_cert.py  ecp_get_cookie.py  ecp_proxy_init.py  utils.py
ciecplib/tool/tests/: __init__.py  test_common.py  test_ecp_cert_info.py  test_ecp_curl.py  test_ecp_get_cert.py  test_utils.py
debian/: changelog  control  copyright  python-ciecplib.install  python-ligo-dot-org.install  python3-ciecplib.install  python3-ciecplib.lintian-overrides  rules  watch
debian/patches/: pyproject.toml-pyopenssl.patch  series  setup.cfg-pyopenssl.patch
docs/: cilogon-x509-retirement.rst  conf.py  ecp-cert-info.rst  ecp-cookie-init.rst  ecp-curl.rst  ecp-get-cert.rst  ecp-get-cookie.rst  ecp-proxy-init.rst  index.rst  install.rst  rtd-environment.yml
docs/_static/: ciecplib.css
docs/api/: ciecplib.cookies.rst  ciecplib.kerberos.rst  ciecplib.rst  ciecplib.utils.rst  ciecplib.x509.rst
ligo/: __init__.py
ligo/org/: __init__.py  _version.py  cookies.py  ecp.py  http.py  kerberos.py  requests.py  saml.py  utils.py  x509.py
ligo/org/tests/: __init__.py  test_utils.py
ligo/org/tool/: __init__.py  ecp_cookie_init.py  ligo_curl.py  ligo_proxy_init.py  utils.py
rpm/: python-ciecplib.spec
