; -- build

[metadata]
license_file = LICENSE

[bdist_wheel]
universal = 1

[build_manpages]
manpages =
	man/ecp-cert-info.1:function=create_parser:module=ciecplib.tool.ecp_cert_info
	man/ecp-cookie-init.1:function=create_parser:module=ciecplib.tool.ecp_cookie_init
	man/ecp-curl.1:function=create_parser:module=ciecplib.tool.ecp_curl
	man/ecp-get-cert.1:function=create_parser:module=ciecplib.tool.ecp_get_cert

; -- tools

[coverage:run]
source = ciecplib

[flake8]
exclude =
	__pycache__,
	.eggs/,
	.git/,
	build/,
	docs/,
per-file-ignores =
	__init__.py:F401

[tool:pytest]
addopts = -r s
