; -- build

[metadata]
name = ciecplib
author = Duncan Macleod
author_email = duncan.macleod@ligo.org
license = GPL-3.0-or-later
license_files = LICENSE
description = A python client for SAML/ECP authentication
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pypi.org/project/ciecplib
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: Scientific/Engineering
project_urls =
	Bug Tracker = https://github.com/duncanmmacleod/ciecplib/issues
	Documentation = https://ciecplib.readthedocs.io/
	Source Code = https://github.com/duncanmmacleod/ciecplib/

[options]
packages = find:
python_version = >=3.6
setup_requires =
	setuptools >= 30.3.0
install_requires =
	M2Crypto
	pyOpenSSL
	requests
	requests-ecp

[options.extras_require]
docs =
	sphinx
	sphinx-argparse
	sphinx-automodapi
	sphinx_rtd_theme
	sphinx-tabs
manpages =
	argparse-manpage
tests =
	importlib-metadata ; python_version < '3.8'
	pytest >= 3.9.0
	pytest-cov
	requests-mock

[options.entry_points]
console_scripts =
	ecp-cert-info = ciecplib.tool.ecp_cert_info:main
	ecp-curl = ciecplib.tool.ecp_curl:main
	ecp-get-cert = ciecplib.tool.ecp_get_cert:main
	ecp-get-cookie = ciecplib.tool.ecp_get_cookie:main

[build_manpages]
manpages =
	man/ecp-cert-info.1:function=create_parser:module=ciecplib.tool.ecp_cert_info
	man/ecp-curl.1:function=create_parser:module=ciecplib.tool.ecp_curl
	man/ecp-get-cert.1:function=create_parser:module=ciecplib.tool.ecp_get_cert
	man/ecp-get-cookie.1:function=create_parser:module=ciecplib.tool.ecp_get_cookie

; -- tools

[coverage:run]
source = ciecplib

[flake8]
select =
	C90,
	E,
	F,
	W,
ignore =
	W503,
exclude =
	__pycache__,
	.eggs/,
	.git/,
	build/,
	docs/,
per-file-ignores =
	__init__.py:F401

[tool:pytest]
addopts = -r s
